--- a/index.html
+++ b/index.html
@@ -7,37 +7,78 @@
     <link href="css/nav.css" rel="stylesheet" />
     <link href="css/index.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/fontello.css">
+    <link rel="stylesheet" href="lib/glide.core.min.css">
+    <link rel="stylesheet" href="lib/glide.theme.min.css">
+    <script src="lib/glide.min.js"></script>
 </head>
 <body>
 <!--start CssMenu-->
-<div class="menu-icon-wrapper">
-	<div class="menu-icon" onclick="toggleCssMenu(this)">
-		<div class="three-line">
-			<span></span>
-			<span></span>
-			<span></span>
-		</div>
-	</div>
+
+<div class="container">
+    <div class="menu-icon-wrapper">
+        <div class="menu-icon" onclick="toggleCssMenu(this)">
+            <div class="three-line">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </div>
+    </div>
+    <div id="cssmenu">
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Why TMUNC</a></li>
+            <li>
+                <span>Committees<i class="arrow"></i></span>
+                <ul class="dropdown">
+                    <li><a href="#">Sub Menu 1</a></li>
+                    <li><a href="#">Sub Menu 2</a></li>
+                </ul>
+            </li>
+            <li><a href="#">Tradition And Innovation</a></li>
+            <li><a href="#">How is TMUNC Different</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Letter From Sec Gen</a></li>
+            <li><a href="#">Register Now !</a></li>
+        </ul>
+    </div>
+    <img class="logo" src="images/logotmunc.png" alt="">
+    <div class="h">Themis Model United Nations Conference 2020</div>
+    <div class="glide-box">
+        <div class="glide-contain">
+            <div class="glide">
+                <div class="glide__track" data-glide-el="track">
+                  <ul class="glide__slides">
+                    <li class="glide__slide"><img src="images/c1.jpg" alt="mun"></li>
+                    <li class="glide__slide"><img src="images/c2.jpg" alt="mun"></li>
+                    <li class="glide__slide"><img src="images/c3.png" alt="mun"></li>
+                  </ul>
+                </div>
+                <div class="glide__arrows" data-glide-el="controls">
+                    <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><span class="fa-chevron-left"></span></button>
+                    <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><span class="fa-chevron-right"></span></button>
+                </div>
+                <div class="glide__bullets" data-glide-el="controls[nav]">
+                    <button class="glide__bullet" data-glide-dir="=0"></button>
+                    <button class="glide__bullet" data-glide-dir="=1"></button>
+                    <button class="glide__bullet" data-glide-dir="=2"></button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-<div id="cssmenu">
-    <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Why TMUNC</a></li>
-        <li>
-            <span>Committees<i class="arrow"></i></span>
-            <ul class="dropdown">
-                <li><a href="#">Sub Menu 1</a></li>
-                <li><a href="#">Sub Menu 2</a></li>
-            </ul>
-        </li>
-        <li><a href="#">Tradition And Innovation</a></li>
-        <li><a href="#">How is TMUNC Different</a></li>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Letter From Sec Gen</a></li>
-        <li><a href="#">Register Now !</a></li>
-    </ul>
-</div>
-<div class="heading"><div class="h">Themis Model United Nations Conference 2020</div></div>
+
+<!-- <div class="glider-contain">
+    <div class="glider">
+      <div><img src="images/c1.jpg" alt="mun"></div>
+      <div><img src="images/c2.jpg" alt="mun"></div>
+      <div><img src="images/c3.png" alt="mun"></div>
+    </div>
+  
+    <button aria-label="Previous" class="glider-prev">«</button>
+    <button aria-label="Next" class="glider-next">»</button>
+    <div role="tablist" class="dots"></div>
+</div> -->
 <!-- <div class="sec sec1 bgw">
     <div class="txt">
     </div>
@@ -68,6 +109,21 @@
 			setTimeout(function(){cssmenu.style.display = "none";},411); 
         }
     }
+    new Glide('.glide',{type: 'carousel',autoplay: 2500}).mount()
+
+    // window.addEventListener('load', function(){
+    //     new Glider(document.querySelector('.glider'), {
+    //         slidesToShow: 1,
+    //         slidesToScroll: 1,
+    //         dots: '#dots',
+    //         draggable: true,
+    //         scrollLock: true,
+    //         arrows: {
+    //             prev: '.glider-prev',
+    //             next: '.glider-next'
+    //         }
+    //     })
+    // })
 </script>
 <!--end CssMenu-->
 </body>
