--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     <br>
     <div class="social">
         Follow Us On<br><br>
+        <a class="item foot" href="https://www.instagram.com/"><span class="fa fa-2x fa-twitter gradient"></span></a>
         <a class="item foot" href="https://www.instagram.com/"><span class="fa fa-2x fa-instagram gradient"></span></a>
         <a class="item foot" href="https://www.facebook.com/"><span class="fa fa-2x fa-facebook-square"></span></a>
     </div>
@@ -109,7 +110,7 @@
 			setTimeout(function(){cssmenu.style.display = "none";},411); 
         }
     }
-    new Glide('.glide',{type: 'carousel',autoplay: 2500}).mount()
+    new Glide('.glide',{type: 'carousel',autoplay: 2500,gap: 50}).mount()
 
     // window.addEventListener('load', function(){
     //     new Glider(document.querySelector('.glider'), {
