--- a/why-tmunc.html
+++ b/why-tmunc.html
@@ -3,7 +3,8 @@
 <head>
     <title>Themis Model United Nations Conference 2020</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald&family=Montserrat:wght@300;400" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
     <link href="css/nav.css" rel="stylesheet" />
     <link href="css/index.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/fontello.css">
@@ -26,8 +27,8 @@
     </div>
     <div id="cssmenu">
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="why-tmunc.html">Why TMUNC</a></li>
+            <li><a href="./">Home</a></li>
+            <li><a href="why-tmunc">Why TMUNC</a></li>
             <li>
                 <span>Committees<i class="arrow"></i></span>
                 <ul class="dropdown">
@@ -42,29 +43,37 @@
             <li><a href="#">Register Now !</a></li>
         </ul>
     </div>
-    <img class="logo" src="images/logotmunc.png" alt="">
-    <div class="h">Themis Model United Nations Conference 2020</div>
-    <div class="glide-box">
-        <div class="glide-contain">
-            <div class="glide">
-                <div class="glide__track" data-glide-el="track">
-                  <ul class="glide__slides">
-                    <li class="glide__slide"><img src="images/c1.jpg" alt="mun"></li>
-                    <li class="glide__slide"><img src="images/c2.jpg" alt="mun"></li>
-                    <li class="glide__slide"><img src="images/c3.png" alt="mun"></li>
-                  </ul>
-                </div>
-                <div class="glide__arrows" data-glide-el="controls">
-                    <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><span class="fa-chevron-left"></span></button>
-                    <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><span class="fa-chevron-right"></span></button>
-                </div>
-                <div class="glide__bullets" data-glide-el="controls[nav]">
-                    <button class="glide__bullet" data-glide-dir="=0"></button>
-                    <button class="glide__bullet" data-glide-dir="=1"></button>
-                    <button class="glide__bullet" data-glide-dir="=2"></button>
-                </div>
-            </div>
-        </div>
+    <img class="small" src="images/logotmunc.png" alt="">
+    <br>
+    <div class="bgw">
+        <h3>Why TMUNC ?</h3>
+        <br>
+        <p>
+            Themis Model United Nations Conference 2020 is a five-day international relations simulation
+            for high school students in the golden city of Amritsar, India. At TMUNC, delegates gain insight
+            into the workings of the United Nations and the dynamics of international relations by assuming
+            the roles of UN representatives and members of other international bodies and national
+            cabinets. TMUNC is an exciting opportunity for students to debate issues that confront world
+            leaders and to draft resolutions in response to these global issues. Participants will develop their
+            abilities to work with others who are equally motivated and passionate about the topics of
+            debate and to respond to global concerns.
+        </p>
+        <p>
+            TMUNC 2020 builds upon years of experience. The core secretariat has an overwhelming
+            experience of organizing around 20+ successful conferences in the Punjab Region alone. The
+            secretariat is well committed to bring the best of the conference to the delegates.
+        </p>
+        <p>
+            True to the spirit of the United Nations, founded in 1945, TMUNC strives to foster a constructive
+            forum for open dialogue on complex global issues, including international peace and security,
+            and economic and social progress. TMUNC India stresses the in-depth examination and
+            resolution of pressing issues, emphasizing process over product. During the conference,
+            students learn the importance of balancing national interests with the needs of the international
+            community, while also learning about the powers and limitations of international negotiation.
+            Delegates will preserve their countries’ national policy while negotiating in the face of other,
+            sometimes conflicting, international policies.
+        </p>
+
     </div>
     <div class="footer">
         <br>
@@ -79,7 +88,6 @@
         <br><br>
     </div>
 </div>
-
 
 <script>
     function toggleCssMenu(icon) {
@@ -97,6 +105,5 @@
     }
     new Glide('.glide',{type: 'carousel',autoplay: 2500,gap: 50}).mount()
 </script>
-<!--end CssMenu-->
 </body>
 </html>
