--- a/how-is-TMUNC-2020-different/index.html
+++ b/how-is-TMUNC-2020-different/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Home - Themis Model United Nations Conference 2020</title>
+    <title>How is TMUNC 2020 different? - Themis Model United Nations Conference 2020</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
@@ -46,29 +46,21 @@
         <li><a href="https://forms.gle/QxQnCKVhiWs9rhB28" target="_blank">Register Now !</a></li>
     </ul>
 </div>
-<img class="logo" src="/assets/images/logotmunc.png" alt="">
-<div class="h">Themis Model United Nations Conference 2020</div>
-<div class="glide-box">
-    <div class="glide-contain">
-        <div class="glide">
-            <div class="glide__track" data-glide-el="track">
-              <ul class="glide__slides">
-                <li class="glide__slide"><img src="assets/images/c1.jpg" alt="mun"></li>
-                <li class="glide__slide"><img src="assets/images/c2.jpg" alt="mun"></li>
-                <li class="glide__slide"><img src="assets/images/c3.png" alt="mun"></li>
-              </ul>
-            </div>
-            <div class="glide__arrows" data-glide-el="controls">
-                <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><span class="fa-chevron-left"></span></button>
-                <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><span class="fa-chevron-right"></span></button>
-            </div>
-            <div class="glide__bullets" data-glide-el="controls[nav]">
-                <button class="glide__bullet" data-glide-dir="=0"></button>
-                <button class="glide__bullet" data-glide-dir="=1"></button>
-                <button class="glide__bullet" data-glide-dir="=2"></button>
-            </div>
-        </div>
-    </div>
+<img class="small" src="/assets/images/logotmunc.png" alt="">
+<br>
+<div class="bgw">
+    
+    <h3>How is TMUNC 2020 different?</h3>
+    <br>
+    <p>SUBSTANTIVE EXCELLENCE</p>
+    <p>
+    The secretariat of TMUNC 2020 is carefully selected to include the
+    most passionate and dedicated members from all over the state. Each of the background guides is carefully crafted
+    for its respective committee and reflects careful and thorough research. All of our executive board are extremely
+    knowledgeable, dedicated, and committed to the ideals of TMUNC 2020 and the broader educational mission of Model
+    United Nations, resulting in well-run and focused committees. Many delegates leave our conference with a new-found
+    passion for international relations and greater awareness of the issues that dominate our world.
+    </p>
 </div>
 <div class="footer">
     <br>
