--- a/letter-from-sec-gen/index.html
+++ b/letter-from-sec-gen/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Home - Themis Model United Nations Conference 2020</title>
+    <title>Letter from Secretary General - Themis Model United Nations Conference 2020</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
@@ -46,30 +46,26 @@
         <li><a href="https://forms.gle/QxQnCKVhiWs9rhB28" target="_blank">Register Now !</a></li>
     </ul>
 </div>
-<img class="logo" src="/assets/images/logotmunc.png" alt="">
-<div class="h">Themis Model United Nations Conference 2020</div>
-<div class="glide-box">
-    <div class="glide-contain">
-        <div class="glide">
-            <div class="glide__track" data-glide-el="track">
-              <ul class="glide__slides">
-                <li class="glide__slide"><img src="assets/images/c1.jpg" alt="mun"></li>
-                <li class="glide__slide"><img src="assets/images/c2.jpg" alt="mun"></li>
-                <li class="glide__slide"><img src="assets/images/c3.png" alt="mun"></li>
-              </ul>
-            </div>
-            <div class="glide__arrows" data-glide-el="controls">
-                <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><span class="fa-chevron-left"></span></button>
-                <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><span class="fa-chevron-right"></span></button>
-            </div>
-            <div class="glide__bullets" data-glide-el="controls[nav]">
-                <button class="glide__bullet" data-glide-dir="=0"></button>
-                <button class="glide__bullet" data-glide-dir="=1"></button>
-                <button class="glide__bullet" data-glide-dir="=2"></button>
-            </div>
-        </div>
+<img class="small" src="/assets/images/logotmunc.png" alt="">
+    <br>
+    <div class="bgw">
+        <h3>Letter From Secretary General</h3>
+        <br>
+        <img src="/assets/images/sec-gen.png" alt="" style="width:100%;">
+        <br><br><br>
+        <strong>
+            Important Instructions Regarding COVID-19:
+        </strong>
+        <ol>
+          <li>Temprature will be checked  and on ground doctor will be available 24/7 to ensure smooth and steady conference in case of medical emergency.
+          <li>Mandatory 6 feet distance would be maintained between the delegates.
+          <li>The delegate will be disinfected using concentrated sanitizers prior to entering the venue premises.
+          <li>Delegates will use the crockery wraped in plastic polithens ensuring that the plates are untouched and completely sanitized.
+          <li>Not more than 20 delegates will be permitted in the hall and Venue will be disinfected 3 times a day.
+          <li>The Delegates are to ensure that they are have undergone a covid test and are safe to enter the premises.
+          <li>Cova app would be used to further verify, if the delegate is safe to enter the conference premises.
+        </ol>
     </div>
-</div>
 <div class="footer">
     <br>
     <div class="social">
