--- a/committees/UNI/index.html
+++ b/committees/UNI/index.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Home - Themis Model United Nations Conference 2020</title>
+    <title>United Nations India - Themis Model United Nations Conference 2020</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
     <link href="/assets/css/nav.css" rel="stylesheet" />
-    <link href="/assets/css/index.css" rel="stylesheet" />
     <link rel="stylesheet" href="/assets/css/fontello.css">
-    <link rel="stylesheet" href="/assets/lib/glide.core.min.css">
-    <link rel="stylesheet" href="/assets/lib/glide.theme.min.css">
-    <script src="/assets/lib/glide.min.js"></script>
+    <link href="/assets/css/comm.css" rel="stylesheet" />
 </head>
+<style media="screen">
+body
+{
+    margin:0px;
+    padding: 0px;
+    background-image: url("/assets/images/uni.jpg");
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    font-family: 'Montserrat', sans-serif;
+}
+</style>
 <body>
 <!--start CssMenu-->
 
@@ -46,29 +56,11 @@
         <li><a href="https://forms.gle/QxQnCKVhiWs9rhB28" target="_blank">Register Now !</a></li>
     </ul>
 </div>
-<img class="logo" src="/assets/images/logotmunc.png" alt="">
-<div class="h">Themis Model United Nations Conference 2020</div>
-<div class="glide-box">
-    <div class="glide-contain">
-        <div class="glide">
-            <div class="glide__track" data-glide-el="track">
-              <ul class="glide__slides">
-                <li class="glide__slide"><img src="assets/images/c1.jpg" alt="mun"></li>
-                <li class="glide__slide"><img src="assets/images/c2.jpg" alt="mun"></li>
-                <li class="glide__slide"><img src="assets/images/c3.png" alt="mun"></li>
-              </ul>
-            </div>
-            <div class="glide__arrows" data-glide-el="controls">
-                <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><span class="fa-chevron-left"></span></button>
-                <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><span class="fa-chevron-right"></span></button>
-            </div>
-            <div class="glide__bullets" data-glide-el="controls[nav]">
-                <button class="glide__bullet" data-glide-dir="=0"></button>
-                <button class="glide__bullet" data-glide-dir="=1"></button>
-                <button class="glide__bullet" data-glide-dir="=2"></button>
-            </div>
-        </div>
-    </div>
+<div class="contain">
+  <div class="c">
+    <span class="s1">UNI</span><br>
+    <span class="s2">United Nations India</span>
+  </div>
 </div>
 <div class="footer">
     <br>
