--- a/committees/index.html
+++ b/committees/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Home - Themis Model United Nations Conference 2020</title>
+    <title>Committees - Themis Model United Nations Conference 2020</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
@@ -46,30 +46,57 @@
         <li><a href="https://forms.gle/QxQnCKVhiWs9rhB28" target="_blank">Register Now !</a></li>
     </ul>
 </div>
-<img class="logo" src="/assets/images/logotmunc.png" alt="">
-<div class="h">Themis Model United Nations Conference 2020</div>
-<div class="glide-box">
-    <div class="glide-contain">
-        <div class="glide">
-            <div class="glide__track" data-glide-el="track">
-              <ul class="glide__slides">
-                <li class="glide__slide"><img src="assets/images/c1.jpg" alt="mun"></li>
-                <li class="glide__slide"><img src="assets/images/c2.jpg" alt="mun"></li>
-                <li class="glide__slide"><img src="assets/images/c3.png" alt="mun"></li>
-              </ul>
+<img class="small" src="/assets/images/logotmunc.png" alt="">
+    <br>
+    <div class="bgw">
+        <h3>Committees</h3>
+        <br>
+        <div class="grid-container">
+          <a href="UNIC/" class="grid-item i1">
+            <div style="background-image:url('/assets/images/unic.jpg')">
+              <span>UNIC</span>
             </div>
-            <div class="glide__arrows" data-glide-el="controls">
-                <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><span class="fa-chevron-left"></span></button>
-                <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><span class="fa-chevron-right"></span></button>
+            <span>United Nation Information Center</span>
+          </a>
+
+          <a href="UNHRC/" class="grid-item i1">
+            <div style="background-image:url('/assets/images/unhrc.jpg')">
+              <span>UNHRC</span>
             </div>
-            <div class="glide__bullets" data-glide-el="controls[nav]">
-                <button class="glide__bullet" data-glide-dir="=0"></button>
-                <button class="glide__bullet" data-glide-dir="=1"></button>
-                <button class="glide__bullet" data-glide-dir="=2"></button>
+            <span>United Nation Human Rights Council</span>
+          </a>
+
+          <a href="UNGA/" class="grid-item i1">
+            <div style="background-image:url('/assets/images/unga.jpg')">
+              <span>UNGA</span>
             </div>
+            <span>United Nation General Assembly - SOCHUM</span>
+          </a>
+
+          <a href="CCS/" class="grid-item i1">
+            <div style="background-image:url('/assets/images/ccs.jpg')">
+              <span>CCS</span>
+            </div>
+            <span>Cabinet committee on Security</span>
+          </a>
+
+          <a href="IPC/" class="grid-item i1">
+            <div style="background-image:url('/assets/images/ipc.jpg')">
+              <span>IPC</span>
+            </div>
+            <span>International Press Committee</span>
+          </a>
+
+          <a href="UNI/" class="grid-item i1">
+            <div style="background-image:url('/assets/images/uni.jpg')">
+              <span>UNI</span>
+            </div>
+            <span>United Nations India</span>
+          </a>
+
+          </div>
         </div>
     </div>
-</div>
 <div class="footer">
     <br>
     <div class="social">
