--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Home - Themis Model United Nations Conference 2020</title>
+    <title>Contact Us - Themis Model United Nations Conference 2020</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
@@ -46,30 +46,25 @@
         <li><a href="https://forms.gle/QxQnCKVhiWs9rhB28" target="_blank">Register Now !</a></li>
     </ul>
 </div>
-<img class="logo" src="/assets/images/logotmunc.png" alt="">
-<div class="h">Themis Model United Nations Conference 2020</div>
-<div class="glide-box">
-    <div class="glide-contain">
-        <div class="glide">
-            <div class="glide__track" data-glide-el="track">
-              <ul class="glide__slides">
-                <li class="glide__slide"><img src="assets/images/c1.jpg" alt="mun"></li>
-                <li class="glide__slide"><img src="assets/images/c2.jpg" alt="mun"></li>
-                <li class="glide__slide"><img src="assets/images/c3.png" alt="mun"></li>
-              </ul>
-            </div>
-            <div class="glide__arrows" data-glide-el="controls">
-                <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><span class="fa-chevron-left"></span></button>
-                <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><span class="fa-chevron-right"></span></button>
-            </div>
-            <div class="glide__bullets" data-glide-el="controls[nav]">
-                <button class="glide__bullet" data-glide-dir="=0"></button>
-                <button class="glide__bullet" data-glide-dir="=1"></button>
-                <button class="glide__bullet" data-glide-dir="=2"></button>
-            </div>
+<img class="small" src="/assets/images/logotmunc.png" alt="">
+    <br>
+    <div class="bgw">
+        <h3>Contact Us</h3>
+        <br>
+        <div style="margin:auto;text-align:center;">
+          <a class="item foot" href="https://instagram.com/themis_mun?igshid=l9i3uh1mpjxi" target="_blank"><span class="fa fa-2x fa-instagram gradient" style="vertical-align: middle;font-size:50px"></span>Instagram</a>
+        </div>
+        <br>
+        <strong>Contact Number : </strong> 098760 01118<br><br>
+        <strong>Address :</strong><br><br>
+        R R Grand,<br>
+        Lawrence Road, Joshi Colony,<br>
+        Amritsar, Punjab 143001
+        <br><br>
+        <div style="margin:auto;text-align:center;">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13586.391096348789!2d74.8771482!3d31.6448616!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb1309f3d8275ba34!2sR%20R%20Grand!5e0!3m2!1sen!2sin!4v1601578389589!5m2!1sen!2sin" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </div>
     </div>
-</div>
 <div class="footer">
     <br>
     <div class="social">
