--- a/strength-and-diversity/index.html
+++ b/strength-and-diversity/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Home - Themis Model United Nations Conference 2020</title>
+    <title>Strength and Diversity - Themis Model United Nations Conference 2020</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
@@ -46,29 +46,19 @@
         <li><a href="https://forms.gle/QxQnCKVhiWs9rhB28" target="_blank">Register Now !</a></li>
     </ul>
 </div>
-<img class="logo" src="/assets/images/logotmunc.png" alt="">
-<div class="h">Themis Model United Nations Conference 2020</div>
-<div class="glide-box">
-    <div class="glide-contain">
-        <div class="glide">
-            <div class="glide__track" data-glide-el="track">
-              <ul class="glide__slides">
-                <li class="glide__slide"><img src="assets/images/c1.jpg" alt="mun"></li>
-                <li class="glide__slide"><img src="assets/images/c2.jpg" alt="mun"></li>
-                <li class="glide__slide"><img src="assets/images/c3.png" alt="mun"></li>
-              </ul>
-            </div>
-            <div class="glide__arrows" data-glide-el="controls">
-                <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><span class="fa-chevron-left"></span></button>
-                <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><span class="fa-chevron-right"></span></button>
-            </div>
-            <div class="glide__bullets" data-glide-el="controls[nav]">
-                <button class="glide__bullet" data-glide-dir="=0"></button>
-                <button class="glide__bullet" data-glide-dir="=1"></button>
-                <button class="glide__bullet" data-glide-dir="=2"></button>
-            </div>
-        </div>
-    </div>
+<img class="small" src="/assets/images/logotmunc.png" alt="">
+<br>
+<div class="bgw">
+    <h3>Strength and Diversity</h3>
+    <p>
+        At TMUNC 2020, you will have the opportunity to meet and interact with more than 100 high school students from more than
+        150 high school students from the length and breadth of the state. TMUNC 2020 provides a host of substantive issues for
+        this dynamic group of students and creates a forum for debate and negotiation among them – a truly worthwhile
+        experience. Our conference is designed to foster negotiation and public speaking skills, introduce students to a
+        range of global challenges, and provide culturally diverse perspectives on a variety of issues. Our strong emphasis on
+        representation at our conference from schools across the globe ensures the TMUNC 2020 experience is a truly
+        international one.
+    </p>
 </div>
 <div class="footer">
     <br>
