--- a/tradition-and-innovation/index.html
+++ b/tradition-and-innovation/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Home - Themis Model United Nations Conference 2020</title>
+    <title>Tradition and Innovation - Themis Model United Nations Conference 2020</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
@@ -46,29 +46,22 @@
         <li><a href="https://forms.gle/QxQnCKVhiWs9rhB28" target="_blank">Register Now !</a></li>
     </ul>
 </div>
-<img class="logo" src="/assets/images/logotmunc.png" alt="">
-<div class="h">Themis Model United Nations Conference 2020</div>
-<div class="glide-box">
-    <div class="glide-contain">
-        <div class="glide">
-            <div class="glide__track" data-glide-el="track">
-              <ul class="glide__slides">
-                <li class="glide__slide"><img src="assets/images/c1.jpg" alt="mun"></li>
-                <li class="glide__slide"><img src="assets/images/c2.jpg" alt="mun"></li>
-                <li class="glide__slide"><img src="assets/images/c3.png" alt="mun"></li>
-              </ul>
-            </div>
-            <div class="glide__arrows" data-glide-el="controls">
-                <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><span class="fa-chevron-left"></span></button>
-                <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><span class="fa-chevron-right"></span></button>
-            </div>
-            <div class="glide__bullets" data-glide-el="controls[nav]">
-                <button class="glide__bullet" data-glide-dir="=0"></button>
-                <button class="glide__bullet" data-glide-dir="=1"></button>
-                <button class="glide__bullet" data-glide-dir="=2"></button>
-            </div>
-        </div>
-    </div>
+<img class="small" src="/assets/images/logotmunc.png" alt="">
+<br>
+<div class="bgw">
+    
+    <h3>Tradition and Innovation</h3>
+    <br>
+    <p>Begun over 2 years ago with an aim to present the people of this city with the best
+        possible UN stimulation, Themis Model United Nations conference is the product of years of gradual refinement. While
+        our
+        conference has expanded considerably since its ideological inception, we are fully committed to ensuring and
+        furthering the
+        excellence of our conference experience at every committee of TMUNC 2020. For the past five years, TMUNC 2020 has
+        promoted a new class of international dialogue and remains dedicated to exploring new and exciting ventures for all
+        conference participants, including delegates and faculty advisors. TMUNC 2020 will feature innovative committee
+        simulations, cutting-edge technology, and, of course, great entertainment for delegates outside of committee.
+    </p>
 </div>
 <div class="footer">
     <br>
