--- a/committees/index.html
+++ b/committees/index.html
@@ -15,7 +15,8 @@
 <body>
 <!--start CssMenu-->
 
-<div class="container"><div class="menu-icon-wrapper">
+<div class="container">
+  <div class="menu-icon-wrapper">
     <div class="menu-icon" onclick="toggleCssMenu(this)">
         <div class="three-line">
             <span></span>
@@ -23,8 +24,8 @@
             <span></span>
         </div>
     </div>
-</div>
-<div id="cssmenu">
+  </div>
+  <div id="cssmenu">
     <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/why-TMUNC/">Why TMUNC</a></li>
@@ -45,8 +46,8 @@
         <li><a href="/letter-from-sec-gen/">Letter From Sec Gen</a></li>
         <li><a href="https://forms.gle/QxQnCKVhiWs9rhB28" target="_blank">Register Now !</a></li>
     </ul>
-</div>
-<img class="small" src="/assets/images/logotmunc.png" alt="">
+  </div>
+  <img class="small" src="/assets/images/logotmunc.png" alt="">
     <br>
     <div class="bgw">
         <h3>Committees</h3>
@@ -94,10 +95,9 @@
             <span>United Nations India</span>
           </a>
 
-          </div>
         </div>
     </div>
-<div class="footer">
+  <div class="footer">
     <br>
     <div class="social">
         Follow Us On<br><br>
