--- a/committees/IP/index.html
+++ b/committees/IP/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>International Press Committee - Themis Model United Nations Conference 2020</title>
+    <title>International Press - Themis Model United Nations Conference 2020</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@ body
 {
     margin:0px;
     padding: 0px;
-    background-image: url("/assets/images/ipc.jpg");
+    background-image: url("/assets/images/ip.jpg");
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
@@ -45,7 +45,7 @@ body
                 <li><a href="/committees/UNHRC/">UNHRC</a></li>
                 <li><a href="/committees/UNGA/">UNGA</a></li>
                 <li><a href="/committees/CCS/">CCS</a></li>
-                <li><a href="/committees/IPC/">IPC</a></li>
+                <li><a href="/committees/IP/">IP</a></li>
                 <li><a href="/committees/UNI/">UNI</a></li>
             </ul>
         </li>
@@ -58,8 +58,8 @@ body
 </div>
 <div class="contain">
   <div class="c">
-    <span class="s1">IPC</span><br>
-    <span class="s2">International Press Committee</span>
+    <span class="s1">IP</span><br>
+    <span class="s2">International Press</span>
   </div>
 
 </div>
