--- a/committees/UNI/index.html
+++ b/committees/UNI/index.html
@@ -45,7 +45,7 @@ body
                 <li><a href="/committees/UNHRC/">UNHRC</a></li>
                 <li><a href="/committees/UNGA/">UNGA</a></li>
                 <li><a href="/committees/CCS/">CCS</a></li>
-                <li><a href="/committees/IPC/">IPC</a></li>
+                <li><a href="/committees/IP/">IP</a></li>
                 <li><a href="/committees/UNI/">UNI</a></li>
             </ul>
         </li>
