--- a/committees/index.html
+++ b/committees/index.html
@@ -35,7 +35,7 @@
                 <li><a href="/committees/UNHRC/">UNHRC</a></li>
                 <li><a href="/committees/UNGA/">UNGA</a></li>
                 <li><a href="/committees/CCS/">CCS</a></li>
-                <li><a href="/committees/IPC/">IPC</a></li>
+                <li><a href="/committees/IP/">IP</a></li>
                 <li><a href="/committees/UNI/">UNI</a></li>
             </ul>
         </li>
@@ -80,11 +80,11 @@
             <span>Cabinet committee on Security</span>
           </a>
 
-          <a href="IPC/" class="grid-item i1">
-            <div style="background-image:url('/assets/images/ipc.jpg')">
-              <span>IPC</span>
+          <a href="IP/" class="grid-item i1">
+            <div style="background-image:url('/assets/images/ip.jpg')">
+              <span>IP</span>
             </div>
-            <span>International Press Committee</span>
+            <span>International Press</span>
           </a>
 
           <a href="UNI/" class="grid-item i1">
