--- a/committees/UNHRC/index.html
+++ b/committees/UNHRC/index.html
@@ -8,6 +8,8 @@
     <link href="/assets/css/nav.css" rel="stylesheet" />
     <link rel="stylesheet" href="/assets/css/fontello.css">
     <link href="/assets/css/comm.css" rel="stylesheet" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <style media="screen">
 body
