--- a/strength-and-diversity/index.html
+++ b/strength-and-diversity/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="/assets/lib/glide.core.min.css">
     <link rel="stylesheet" href="/assets/lib/glide.theme.min.css">
     <script src="/assets/lib/glide.min.js"></script>
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
 <!--start CssMenu-->
