--- a/committees/CCS/index.html
+++ b/committees/CCS/index.html
@@ -41,14 +41,14 @@ body
         <li><a href="/">Home</a></li>
         <li><a href="/why-TMUNC/">Why TMUNC</a></li>
         <li>
-            <a href="/committees/">Committees<i class="arrow"></i></a>
+            <a href="/committees/">Committees <i class="arrow"></i></a>
             <ul class="dropdown">
-                <li><a href="/committees/UNIC/">UNIC</a></li>
-                <li><a href="/committees/UNHRC/">UNHRC</a></li>
-                <li><a href="/committees/UNGA/">UNGA</a></li>
-                <li><a href="/committees/CCS/">CCS</a></li>
-                <li><a href="/committees/IP/">IP</a></li>
-                <li><a href="/committees/UNI/">UNI</a></li>
+                <li class="sub-item"><a href="/committees/UNIC/">UNIC</a></li>
+                <li class="sub-item"><a href="/committees/UNHRC/">UNHRC</a></li>
+                <li class="sub-item"><a href="/committees/UNGA/">UNGA</a></li>
+                <li class="sub-item"><a href="/committees/CCS/">CCS</a></li>
+                <li class="sub-item"><a href="/committees/IP/">IP</a></li>
+                <li class="sub-item"><a href="/committees/UNI/">UNI</a></li>
             </ul>
         </li>
         <li><a href="/tradition-and-innovation/">Tradition And Innovation</a></li>
